# float-torrent

./: Cargo.toml  README.md
doc/: endpoint.md  komunikacija.md
src/: error.rs  http.rs  lib.rs  main.rs  parse.rs  provider.rs
src/common/: error.rs  http.rs  lib.rs  parse.rs
src/common/sequnce_providers/: mod.rs
src/common/sequnce_providers/implementations/: arithmetic.rs  constant.rs  drop.rs  geometric.rs  lin_com.rs  linear_recursion_h.rs  max_seqs.rs  min_seqs.rs  mod.rs  p_euler.rs  power_mod.rs  prod.rs  round.rs  sum.rs
src/common/sequnce_providers/variants/: function.rs  misc.rs  mod.rs  operation.rs
src/provider/: function.rs  misc.rs  mod.rs  operation.rs
