[package]
name = "float-torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
automod = "1.0.14"
clap = { version = "4.5.16", features = ["derive"] }
http = "1.1.0"
httparse = "1.9.4"
nalgebra = "0.33.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
